# bcr-demo

./: .gitignore  CMakeLists.txt  README.md
remote/chrome-extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
src/: agentmain.cpp  bcragentservice.cpp  bcragentservice.h  bcrserver.cpp  bcrserver.h  clientmain.cpp  mainwindow.cpp  mainwindow.h
